Material name wrap fix

--- a/css/akMaterial.css
+++ b/css/akMaterial.css
@@ -4,8 +4,9 @@
     list-style-type: none; 
     background-color: rgb(68, 67, 67); 
     border-radius: 5px; 
-    margin-right: 5px;
-    margin-top: 10px;
+    margin-left: 3px;
+    margin-right: 12px;
+    margin-top: 18px;
     margin-bottom: 5px;
     border-top-left-radius: 0px;
 }
@@ -13,13 +14,18 @@
 .akmat-container .item-name {
     color:#DDD;
     position: absolute;
-    white-space: nowrap;
-    margin-top:-5px;
+    /* white-space: nowrap; */
+    margin-top:-15px;
     margin-left: -5px;
     font-size: 12px;
+    line-height: 10pt;
+    flex: 1 0 auto;
+    min-width: 100px;
+    /* vertical-align: bottom; */
+    text-align: center;
     padding:4px;
-    padding-top: 1px;
-    padding-bottom:1px;
+    padding-top: 3px;
+    padding-bottom:3px;
     border-radius: 2px;
     /* text-shadow: 0px 0px 2px #2f2f2f ; */
     background-color: #2f2f2f;
