--- a/css/akchardetail.css
+++ b/css/akchardetail.css
@@ -86,11 +86,13 @@ body {
 }
 
 .chara-detail-container .right-menu-container {
-    padding: 15px;
+    padding: 8px;
+    padding-top:15px;
     float: right;
-    max-width: 380px;
+    max-width: 400px;
     width: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .right-menu-container .elitesection-container {
@@ -331,7 +333,7 @@ body {
     
 }
 #skill-contents .skillstats .skilldesc {
-    min-width: 300px;
+    min-width: 330px;
     width: 100%
     
 }
@@ -496,7 +498,7 @@ body {
 .chara-detail-container .right-col-menu {
     padding:0px
 } */
-@media (max-width: 768px ){
+@media (max-width: 900px ){
     /* .chara-detail-container .left-col-menu {
         height: 90vw;
         padding:0px
@@ -506,6 +508,7 @@ body {
     } */
 
     .chara-detail-container .right-menu-container {
+        padding-top:50px;
         max-width: 100vw;
         overflow: visible;
     }
